@@ -6,13 +6,11 @@ $smarty = new Smarty;
 
 
 //$smarty->force_compile = true;
-//$smarty->debugging = true;
+$smarty->debugging = true;
 $smarty->caching = true;
-$smarty->caching_lifetime = 120;
+$smarty->cache_lifetime = 120;
 
-
-
-$smarty->assign("Name","Fred Irving Johnathan Bradley Peppergill");
+$smarty->assign("Name","Fred Irving Johnathan Bradley Peppergill",true);
 $smarty->assign("FirstName",array("John","Mary","James","Henry"));
 $smarty->assign("LastName",array("Doe","Smith","Johnson","Case"));
 $smarty->assign("Class",array(array("A","B","C","D"), array("E", "F", "G", "H"),
